[gd_scene load_steps=4 format=3 uid="uid://c6cqevm1ksalf"]

[ext_resource type="Script" path="res://scripts/SongList.gd" id="1_3b2d1"]
[ext_resource type="Texture2D" uid="uid://dx6apju58ja33" path="res://assets/ui/search_icon.svg" id="1_xkwma"]
[ext_resource type="Texture2D" uid="uid://cot2jv115u8i1" path="res://assets/ui/Bg.png" id="2_uub2l"]

[node name="MainContainer" type="VBoxContainer"]
offset_left = 28.0
offset_top = 13.0
offset_right = 697.0
offset_bottom = 1280.0
script = ExtResource("1_3b2d1")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(324, 596)
texture = ExtResource("2_uub2l")

[node name="SearchBox" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Введите название песни или имя исполнителя"
clear_button_enabled = true
right_icon = ExtResource("1_xkwma")
caret_blink = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, 1150)
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="SongsContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SongList" type="ItemList" parent="ScrollContainer/SongsContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 50
auto_height = true
